--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.1",
     "typer>=0.9.0",
+    "pykrx>=1.0.51",
+    "setuptools>=80.9.0",
 ]
 
 [project.scripts]
