✨ feat: 신고가 지표 기능 추가
- HighPriceIndicatorService 구현 (역대최고가, 52주최고가 등)
- PykrxPriceAdapter 추가하여 주가 데이터 조회
- RankingExcelAdapter에 신고가 지표 컬럼 추가
- ExcelFormatter에 신규 색상 추가 (진한주황, 주황, 연두)
- MasterDataService 개선 (ticker 정보 유지)
- 관련 단위 테스트 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ setuptools>=65.0.0
 # Web scraping
 cloudscraper>=1.2.71
 beautifulsoup4>=4.12.0
+playwright>=1.40.0
 
 # Data processing
 pandas>=2.0.0
